[workspace]
members = [
    "node",
    "pallets/sortition-sum-game",
    "traits/sortition-sum-game-link",
    "traits/schelling-game-shared-link",
    "pallets/election",
    "pallets/project-submission",
    "pallets/schelling-game-shared",
    "pallets/profile-validation",
    "pallets/posts",
    "pallets/spaces",
    "pallets/support",
    "runtime",
]
[profile.release]
panic = "unwind"
